# locatel-demo-backend

./: .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
customer/: admin.py  models.py  serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_customer_mobile_number_and_more.py  0003_remove_customer_mobile_number_customer_phone.py  0004_customer_address.py
sale/: models.py  serializers.py  urls.py  utils.py  views.py
sale/migrations/: 0001_initial.py  0002_alter_product_iva.py  0003_saleproduct_quantity.py  0004_alter_saleproduct_iva.py  0005_alter_saleproduct_code.py  0006_remove_product_has_iva.py
user/: data.py  models.py
user/migrations/: 0001_initial.py
